Fixed the build erros and other issue from plan
